[gd_scene load_steps=10 format=3 uid="uid://b5meqibplx04s"]

[ext_resource type="Texture2D" uid="uid://bwc0ccjenmbql" path="res://assets/UI/Sheet/Setting menu.png" id="1_l7lyv"]
[ext_resource type="Script" path="res://scene/inventory/chest/store/chest_store.gd" id="1_q1n6d"]
[ext_resource type="Theme" uid="uid://d1nkmrepinfb0" path="res://scene/menu/menu.tres" id="2_vk262"]
[ext_resource type="Script" path="res://scene/inventory/chest/store/store_slot.gd" id="3_7ad14"]
[ext_resource type="Texture2D" uid="uid://dkn0yi4k2ipte" path="res://assets/UI/Sheet/buttons/Square Buttons 26x26.png" id="3_i7bcv"]
[ext_resource type="Script" path="res://scene/inventory/chest/store/chest_inventory.gd" id="4_vj1ma"]
[ext_resource type="Script" path="res://scene/inventory/chest/store/player_inventory.gd" id="7_dk27l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gnv7n"]
atlas = ExtResource("1_l7lyv")
region = Rect2(139, 12, 106, 122)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_keeqv"]
texture = ExtResource("3_i7bcv")
region_rect = Rect2(11, 59, 26, 28)

[node name="ChestStore" type="Node2D"]
script = ExtResource("1_q1n6d")

[node name="Background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.5
offset_top = -241.5
offset_right = 292.5
offset_bottom = 241.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vk262")
texture = SubResource("AtlasTexture_gnv7n")

[node name="ChestInventory" type="Node2D" parent="."]
script = ExtResource("4_vj1ma")

[node name="ColorRect" type="ColorRect" parent="ChestInventory"]
offset_left = 30.0
offset_top = -183.0
offset_right = 260.0
offset_bottom = 219.0
color = Color(0.909804, 0.811765, 0.65098, 1)

[node name="Container" type="GridContainer" parent="ChestInventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -177.0
offset_right = 249.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="Slot1" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot2" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot3" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot4" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot5" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot6" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot7" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot8" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot9" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot10" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot11" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot12" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot13" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot14" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot15" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot16" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot17" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot18" type="Panel" parent="ChestInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Label" type="Label" parent="ChestInventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -229.0
offset_right = 226.0
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vk262")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Chest"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ColorRect2" type="ColorRect" parent="ChestInventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -197.0
offset_right = 250.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInventory" type="Node2D" parent="."]
position = Vector2(-288, 0)
script = ExtResource("7_dk27l")

[node name="ColorRect" type="ColorRect" parent="PlayerInventory"]
offset_left = 25.0
offset_top = -183.0
offset_right = 255.0
offset_bottom = 219.0
color = Color(0.909804, 0.811765, 0.65098, 1)

[node name="Container" type="GridContainer" parent="PlayerInventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = -177.0
offset_right = 245.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="Slot1" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot2" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot3" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot4" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot5" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot6" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot7" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot8" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot9" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot10" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot11" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot12" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot13" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot14" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot15" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot16" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot17" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Slot18" type="Panel" parent="PlayerInventory/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_keeqv")
script = ExtResource("3_7ad14")

[node name="Label" type="Label" parent="PlayerInventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -229.0
offset_right = 220.0
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vk262")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ColorRect2" type="ColorRect" parent="PlayerInventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -196.5
offset_right = 241.0
offset_bottom = -194.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="inventory_updated" from="." to="ChestInventory" method="_on_chest_store_inventory_updated"]
[connection signal="inventory_updated" from="." to="PlayerInventory" method="_on_chest_store_inventory_updated"]
